dataset1235/2025-2/2947369575/users/3195650647/executions/1003782500_1462915504.log
== SUBMISSION (2025-09-01 12:54:47)
-- CODE: 

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
None
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
None
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
None
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
None
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
None
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 13:06:02)
-- CODE: 
from msth import *
l = float(input())
a = (5/2) * l * ap 
ap l/(2*tan(pi/5))
print(round(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 4
    ap l/(2*tan(pi/5))
       ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 4
    ap l/(2*tan(pi/5))
       ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 4
    ap l/(2*tan(pi/5))
       ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 4
    ap l/(2*tan(pi/5))
       ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 4
    ap l/(2*tan(pi/5))
       ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 4
    ap l/(2*tan(pi/5))
       ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-29 19:08:39)
-- CODE: 
import math
lado = float(input())
ap = lado/(2*math.tan(math.pi/5))
a = (5/2) *lado*ap
print(round(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
172.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:21:43)
-- CODE: 
import math
lado = float(input())
ap = lado/(2*math.tan(math.pi/5))
area = (5/2)* lado*ap
print(round(area,2))



-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 19:27:59)
-- CODE: 
from math import tam
lado = float(input("qual e o compromento?"))
ap = lado/(2*tan(pi/5))
a = (5/2)*lado*ap
print(round(a,2))
# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from math import tam
ImportError: cannot import name 'tam' from 'math' (unknown location)
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from math import tam
ImportError: cannot import name 'tam' from 'math' (unknown location)
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from math import tam
ImportError: cannot import name 'tam' from 'math' (unknown location)
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from math import tam
ImportError: cannot import name 'tam' from 'math' (unknown location)
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from math import tam
ImportError: cannot import name 'tam' from 'math' (unknown location)
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from math import tam
ImportError: cannot import name 'tam' from 'math' (unknown location)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 21:21:42)
-- CODE: 
import math
lado = float(input())
ap = lado/(2*math.tan(math.pi/5))
area = (5/2)* lado*ap
print(round(area,2))



-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
172.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 19:32:51)
-- CODE: 
from math import *
lado = float(input())
a = (5/2) * lado*ap 
ap = lado/(2 * tan(pi/5))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a = (5/2) * lado*ap 
                     ^^
NameError: name 'ap' is not defined. Did you mean: 'map'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a = (5/2) * lado*ap 
                     ^^
NameError: name 'ap' is not defined. Did you mean: 'map'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a = (5/2) * lado*ap 
                     ^^
NameError: name 'ap' is not defined. Did you mean: 'map'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a = (5/2) * lado*ap 
                     ^^
NameError: name 'ap' is not defined. Did you mean: 'map'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a = (5/2) * lado*ap 
                     ^^
NameError: name 'ap' is not defined. Did you mean: 'map'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a = (5/2) * lado*ap 
                     ^^
NameError: name 'ap' is not defined. Did you mean: 'map'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 19:28:16)
-- CODE: 
from math import *
lado = float(input("qual e o compromento?"))
ap = lado/(2*tan(pi/5))
a = (5/2)*lado*ap
print(round(a,2))
# faça seu código aqui!
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
qual e o compromento?139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
qual e o compromento?61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
qual e o compromento?208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
qual e o compromento?110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
qual e o compromento?27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
qual e o compromento?172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 22:08:41)
-- CODE: 
from math import *
lado = float(input("qual e o compromento?"))
a = (5/2) 
# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
qual e o compromento?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
qual e o compromento?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
qual e o compromento?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
qual e o compromento?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
qual e o compromento?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
qual e o compromento?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 13:09:57)
-- CODE: 
from math import *
l = float(input())
a = (5/2) * l * apotema
apotema = l/(2*tan(pi/5))
print(round(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a = (5/2) * l * apotema
                    ^^^^^^^
NameError: name 'apotema' is not defined
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a = (5/2) * l * apotema
                    ^^^^^^^
NameError: name 'apotema' is not defined
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a = (5/2) * l * apotema
                    ^^^^^^^
NameError: name 'apotema' is not defined
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a = (5/2) * l * apotema
                    ^^^^^^^
NameError: name 'apotema' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a = (5/2) * l * apotema
                    ^^^^^^^
NameError: name 'apotema' is not defined
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a = (5/2) * l * apotema
                    ^^^^^^^
NameError: name 'apotema' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 19:36:20)
-- CODE: 
from math import *
lado = float(input())
a = (5/2)*lado*ap 
ap = lado/(2 * tan * (pi/5))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a = (5/2)*lado*ap 
                   ^^
NameError: name 'ap' is not defined. Did you mean: 'map'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a = (5/2)*lado*ap 
                   ^^
NameError: name 'ap' is not defined. Did you mean: 'map'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a = (5/2)*lado*ap 
                   ^^
NameError: name 'ap' is not defined. Did you mean: 'map'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a = (5/2)*lado*ap 
                   ^^
NameError: name 'ap' is not defined. Did you mean: 'map'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a = (5/2)*lado*ap 
                   ^^
NameError: name 'ap' is not defined. Did you mean: 'map'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a = (5/2)*lado*ap 
                   ^^
NameError: name 'ap' is not defined. Did you mean: 'map'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 19:37:47)
-- CODE: 
from math import *
lado = float(input())
ap = lado/(2 * tan * (pi/5))
a = (5/2)*lado*ap 
print(round(a,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap = lado/(2 * tan * (pi/5))
               ~~^~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap = lado/(2 * tan * (pi/5))
               ~~^~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap = lado/(2 * tan * (pi/5))
               ~~^~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap = lado/(2 * tan * (pi/5))
               ~~^~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap = lado/(2 * tan * (pi/5))
               ~~^~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap = lado/(2 * tan * (pi/5))
               ~~^~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-29 19:08:32)
-- CODE: 
import math
lado = float(input())
ap = lado/(2*math.tan(math.pi/5))
a = (5/2) *lado*ap
print(round(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
172.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 19:39:35)
-- CODE: 
from math import *
lado = float(input())
ap = lado/(2*tan(pi/5))
a = (5/2)*lado*ap 
print(round(a,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 13:04:57)
-- CODE: 
from msth import *
l = float(input())
a = (5/2) * l * ap 
ap l / (2*tan(pi/5))
print(round(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 4
    ap l / (2*tan(pi/5))
       ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 4
    ap l / (2*tan(pi/5))
       ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 4
    ap l / (2*tan(pi/5))
       ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 4
    ap l / (2*tan(pi/5))
       ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 4
    ap l / (2*tan(pi/5))
       ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 4
    ap l / (2*tan(pi/5))
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-29 19:07:04)
-- CODE: 
import math
lado = float(input())
ap = lado/(2*math.tan(math.pi/5))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
None
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
None
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
None
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
None
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
None
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 19:36:08)
-- CODE: 
from math import *
lado = float(input())
ap = lado/(2 * tan * (pi/5))
a = (5/2)*lado*ap 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap = lado/(2 * tan * (pi/5))
               ~~^~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap = lado/(2 * tan * (pi/5))
               ~~^~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap = lado/(2 * tan * (pi/5))
               ~~^~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap = lado/(2 * tan * (pi/5))
               ~~^~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap = lado/(2 * tan * (pi/5))
               ~~^~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap = lado/(2 * tan * (pi/5))
               ~~^~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 13:06:07)
-- CODE: 
from msth import *
l = float(input())
a = (5/2) * l * ap 
ap l/(2*tan(pi/5))
print(round(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 4
    ap l/(2*tan(pi/5))
       ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 4
    ap l/(2*tan(pi/5))
       ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 4
    ap l/(2*tan(pi/5))
       ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 4
    ap l/(2*tan(pi/5))
       ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 4
    ap l/(2*tan(pi/5))
       ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 4
    ap l/(2*tan(pi/5))
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 19:39:23)
-- CODE: 
from math import *
lado = float(input())
ap = lado/(2*tan(pi/5))
a = (5/2)*lado*ap 
print(round(a,1))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
139.4
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
61.9
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
208.2
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
110.1
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
27.5
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
172.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 19:36:38)
-- CODE: 
from math import *
lado = float(input())
a = (5/2)*lado*ap 
ap = lado/(2 * tan * (pi/5))
print(round(a,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a = (5/2)*lado*ap 
                   ^^
NameError: name 'ap' is not defined. Did you mean: 'map'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a = (5/2)*lado*ap 
                   ^^
NameError: name 'ap' is not defined. Did you mean: 'map'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a = (5/2)*lado*ap 
                   ^^
NameError: name 'ap' is not defined. Did you mean: 'map'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a = (5/2)*lado*ap 
                   ^^
NameError: name 'ap' is not defined. Did you mean: 'map'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a = (5/2)*lado*ap 
                   ^^
NameError: name 'ap' is not defined. Did you mean: 'map'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a = (5/2)*lado*ap 
                   ^^
NameError: name 'ap' is not defined. Did you mean: 'map'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 22:18:51)
-- CODE: 
from math import *
lado = float(input("qual e o compromento?"))
ap = lado/(2*tam(pi/5))
a = (5/2)*lado*ap
# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap = lado/(2*tam(pi/5))
                 ^^^
NameError: name 'tam' is not defined. Did you mean: 'tan'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap = lado/(2*tam(pi/5))
                 ^^^
NameError: name 'tam' is not defined. Did you mean: 'tan'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap = lado/(2*tam(pi/5))
                 ^^^
NameError: name 'tam' is not defined. Did you mean: 'tan'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap = lado/(2*tam(pi/5))
                 ^^^
NameError: name 'tam' is not defined. Did you mean: 'tan'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap = lado/(2*tam(pi/5))
                 ^^^
NameError: name 'tam' is not defined. Did you mean: 'tan'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap = lado/(2*tam(pi/5))
                 ^^^
NameError: name 'tam' is not defined. Did you mean: 'tan'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 13:06:05)
-- CODE: 
from msth import *
l = float(input())
a = (5/2) * l * ap 
ap l/(2*tan(pi/5))
print(round(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 4
    ap l/(2*tan(pi/5))
       ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 4
    ap l/(2*tan(pi/5))
       ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 4
    ap l/(2*tan(pi/5))
       ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 4
    ap l/(2*tan(pi/5))
       ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 4
    ap l/(2*tan(pi/5))
       ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 4
    ap l/(2*tan(pi/5))
       ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 20:26:32)
-- CODE: 
from math import *
l = float(input())
apotema = l/(2+tan(pi/5))
a = (5/2) * l * apotema
print(round(a,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
74.27
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
33.01
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
110.95
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
58.68
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
14.67
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
91.69
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-29 19:08:50)
-- CODE: 
import math
lado = float(input())
ap = lado/(2*math.tan(math.pi/5))
a = (5/2) *lado*ap
print(round(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
172.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 22:19:33)
-- CODE: 
from math import *
lado = float(input("qual e o compromento?"))
ap = lado/(2*tam(pi/5))
a = (5/2)*lado*ap
print(round(a,2))
# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap = lado/(2*tam(pi/5))
                 ^^^
NameError: name 'tam' is not defined. Did you mean: 'tan'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap = lado/(2*tam(pi/5))
                 ^^^
NameError: name 'tam' is not defined. Did you mean: 'tan'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap = lado/(2*tam(pi/5))
                 ^^^
NameError: name 'tam' is not defined. Did you mean: 'tan'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap = lado/(2*tam(pi/5))
                 ^^^
NameError: name 'tam' is not defined. Did you mean: 'tan'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap = lado/(2*tam(pi/5))
                 ^^^
NameError: name 'tam' is not defined. Did you mean: 'tan'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap = lado/(2*tam(pi/5))
                 ^^^
NameError: name 'tam' is not defined. Did you mean: 'tan'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 19:36:39)
-- CODE: 
from math import *
lado = float(input())
a = (5/2)*lado*ap 
ap = lado/(2 * tan * (pi/5))
print(round(a,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a = (5/2)*lado*ap 
                   ^^
NameError: name 'ap' is not defined. Did you mean: 'map'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a = (5/2)*lado*ap 
                   ^^
NameError: name 'ap' is not defined. Did you mean: 'map'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a = (5/2)*lado*ap 
                   ^^
NameError: name 'ap' is not defined. Did you mean: 'map'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a = (5/2)*lado*ap 
                   ^^
NameError: name 'ap' is not defined. Did you mean: 'map'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a = (5/2)*lado*ap 
                   ^^
NameError: name 'ap' is not defined. Did you mean: 'map'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a = (5/2)*lado*ap 
                   ^^
NameError: name 'ap' is not defined. Did you mean: 'map'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 13:06:29)
-- CODE: 
from math import *
l = float(input())
a = (5/2) * l * ap 
ap l/(2*tan(pi/5))
print(round(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 4
    ap l/(2*tan(pi/5))
       ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 4
    ap l/(2*tan(pi/5))
       ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 4
    ap l/(2*tan(pi/5))
       ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 4
    ap l/(2*tan(pi/5))
       ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 4
    ap l/(2*tan(pi/5))
       ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 4
    ap l/(2*tan(pi/5))
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 19:36:07)
-- CODE: 
from math import *
lado = float(input())
ap = lado/(2 * tan * (pi/5))
a = (5/2)*lado*ap 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap = lado/(2 * tan * (pi/5))
               ~~^~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap = lado/(2 * tan * (pi/5))
               ~~^~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap = lado/(2 * tan * (pi/5))
               ~~^~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap = lado/(2 * tan * (pi/5))
               ~~^~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap = lado/(2 * tan * (pi/5))
               ~~^~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ap = lado/(2 * tan * (pi/5))
               ~~^~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-29 19:08:16)
-- CODE: 
import math
lado = float(input())
ap = lado/(2*math.tan(math.pi/5))
a = (5/2) *lado*ap
print(round(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
172.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 20:26:16)
-- CODE: 
from math import *
l = float(input())
apotema = l/(2*tan(pi/5))
a = (5/2) * l * apotema
print(round(a,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-29 19:09:02)
-- CODE: 
import math
lado = float(input())
ap = lado/(2*math.tan(math.pi/5))
a = (5/2) *lado*ap
print(round(a,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 13:06:27)
-- CODE: 
from math import *
l = float(input())
a = (5/2) * l * ap 
ap l/(2*tan(pi/5))
print(round(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 4
    ap l/(2*tan(pi/5))
       ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 4
    ap l/(2*tan(pi/5))
       ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 4
    ap l/(2*tan(pi/5))
       ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 4
    ap l/(2*tan(pi/5))
       ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 4
    ap l/(2*tan(pi/5))
       ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 4
    ap l/(2*tan(pi/5))
       ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 21:21:28)
-- CODE: 
import math
lado = float(input())
ap = lado/(2*math.tan(math.pi/5))
area = (5/2)* lado*ap
print(round(area,2))



-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
172.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 13:08:08)
-- CODE: 
from math import *
l = float(input())
ap l/2*tan(pi/5)
a = (5/2) * l * ap 
print(round(a,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 3
    ap l/2*tan(pi/5)
       ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 3
    ap l/2*tan(pi/5)
       ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 3
    ap l/2*tan(pi/5)
       ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 3
    ap l/2*tan(pi/5)
       ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 3
    ap l/2*tan(pi/5)
       ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 3
    ap l/2*tan(pi/5)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
